# type_info_extractor

./: README.md
type_info_extractor-beta/: CMakeLists.txt  Learning-from-best-draft.odt  Makefile.CPP11  Makefile.CPP17  Makefile.in  Makefile.st20  README.txt  output-20.txt  output-clang-20.txt  output.txt  run_tests.sh.in  type_info_extractor.pro
type_info_extractor-beta/.svn/: wc.db
type_info_extractor-beta/pod_extractor/: build_type.h  extract_type_info.h  field_count.h  main.cpp  mimic_type.h  mp-new.h  mp-old.h  mp.h  mp_utils.h  pod_inspector.h  seq_tuple.h  type_cypher.h  typeid_array.h
type_info_extractor-beta/pod_extractor/tests/: experimental.cpp  mp_utils.h  pod_ops.cpp  pod_ops.h  tests.cpp  tests.h  total_count_obsolete.h
